--- a/dissertating_rmd/dissertation/01_Intro.Rmd
+++ b/dissertating_rmd/dissertation/01_Intro.Rmd
@@ -1,62 +1,74 @@
-```{r echo=FALSE}
-library(emo)
+
+# Introduction {#intro}
+## A preliminary guide
+
+This is a non-exhaustive guide to writing your dissertation using `RMarkdown` and `Bookdown`. 
+Specifically, it will walk you through *one method* of organziing, writing, and rendering a dissertation with these tools, using an adapted version of the [Western University](https://www.uwo.ca/) [thesis templates](https://grad.uwo.ca/academics/thesis/formatting.html) and building primarily off the techniques outlined by [Lucy D'Agostino McGowan](https://livefreeordichotomize.com/2018/09/14/one-year-to-dissertate/), among others (see Section \@ref(other-resources) for more resources!).
+
+**Caveat:** At the time of writing, I am currently in the throes of dissertating. This means that there are likely several details I haven't quite hammered out yet, or techniques I've missed. In the last year and a half, I've been collecting other people's tutorials and resources on using RMarkdown + for the purposes of using it to write a dissertation. The final product is my interpretation of these resources, adapted to my needs, and presented here as a ***"What-I've-learned-so-far"***-style tutorial.
+
+<center>
+<iframe src="https://giphy.com/embed/fhAwk4DnqNgw8" width="480" height="259" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/life-school-college-fhAwk4DnqNgw8">via GIPHY</a></p>
+</center>
+
+This tutorial will use a [Kaggle dataset](https://www.kaggle.com/starbucks/starbucks-menu) that reports nutritional information about Starbucks bevarages[^starbucks]. We've seen this dataset used twice in previous R-Ladies #LdnOnt presentations, so the primary motivation behind using it here is for continuity's sake (also, coffee is a nice thing to have during dissertation writing). This tutorial loosely builds on another [tutorial](https://github.com/rladies/meetup-presentations_london_ontario/tree/master/2018-03-06_rmarkdown) I gave in 2017 about using RMarkdown to write journal articles. Presumably this could be a realistic step for many people: write an article during your PhD (using RMarkdown), and eventually incorporate it into a dissertation.
+
+While the focus of this tutorial is technically about *dissertation* writing, it will hopefully be a practical tool for learning more about RMarkdown and Bookdown in general from the perspective of somebody who's learning as she goes.
+
+[^starbucks]: I don't know how accurate the actual nutritional information is... I wouldn't rely on this tutorial as a source for Starbucks info if I were you...
+
+## Setting up
+
+In order to use this tutorial, you need the following:
+
+- [R](https://www.r-project.org/)
+- [RStudio](https://www.rstudio.com/products/rstudio/download/)
+  - Recent versions of RStudio also include [Pandoc](), which is required to compile documents
+- Latex for [Mac](https://tug.org/mactex/mactex-download.html) or [Windows](https://miktex.org/download) (if you want to compile to PDF).
+  - Alternatively, install [TinyTex](https://yihui.name/tinytex/), the Latex distribution created and recommended by Yihui Xie, creator of RMarkdown and bookdown[^139].
+
+[^139]: TinyTex is probably the best way to go because Yihui always anticipates the problems we will run into, but I personally have not used it.
+
+- [`bookdown` R package](https://github.com/rstudio/bookdown). Installing `bookdown` will automatically import `knitr` and `rmarkdown` pacakges as well. Install it by entering the following code into your R console:
+
+```{r eval=FALSE, echo=TRUE}
+install.packages("bookdown")
 ```
 
 
-# Introduction {#intro}
+## My current process: A glimpse {#process}
 
-![](../images/rladies-dissertating.jpeg)
+1. `r emo::ji("pencil2")`
+As I collected data and started gearing up to write the capital D Dissertation, I started keeping my notes in a separate bookdown project. This also helped me cut my teeth on bookdown, and made my notes wayyyyy easier to sift through than previous attempts (Google Docs, actual notebooks, txt files, readmes... I have found a lot of ways to flail).
 
-
-
-## My process {#process}
-
-0. `r emo::ji("pencil2")`
-Keep notes in a separate bookdown project. This also helped me cut my teeth on bookdown, and made my notes wayyyyy easier to sift through than previous attempts (Google Docs, actual notebooks, txt files, readmes... I have found a lot of ways to flail)
-
-1. `r emo::ji("spiral_notepad")` 
+2. `r emo::ji("spiral_notepad")` 
 Get some data in a .csv file
 
-2. `r emo::ji("broom")` 
-R file #1: load, tidy, and explore data
+3. `r emo::ji("broom")` 
+Load, tidy, and explore data in a designated .R file (e.g., `1_tidy.R`)
 
-3. `r emo::ji("chart_with_upwards_trend")`
-R file #2: stats and prep data for use in text, sourcing the work done in R file #1.
+4. `r emo::ji("chart_with_upwards_trend")`
+Carry out tats and prep data for use in text in a second designated .R file (2_models.R), sourcing the work done in `1_tidy.R`.
 
-4. `r emo::ji("book")`
-Rmd file: Write up results! Figures coded in text. Stats reported from final models defined in R file #2, with help from predefined functions and code snippets.
-    - This does not have to be a complete chapter. It can be part of a chapter. How modular you want to get is really up to you.
+5. `r emo::ji("book")`
+RMarkdown files
+  - Separate files for Intro, Methods, Results, Discussion, References
+    - Many of these main chapters further broken down into smaller, more modular .Rmd files
+  - The Results .Rmd files make heavy use of the work done in 3 & 4. 
+    - Figures coded in text. 
+    - Stats reported from final models defined in 2_models.R, with help from predefined functions and code snippets.
 
-5. `r emo::ji("computer")`
+6. `r emo::ji("computer")`
 Preview dissertation for myself in an .html format (compiles faster, easier to navigate, and I save it to my Chrome bookmarks for quick access)
 
-6. `r emo::ji("memo")`
-Preview multiple .Rmd files in Word to send to my supervisor as .docx
+7. `r emo::ji("memo")`
+Preview multiple .Rmd files in Word to send to my supervisor as a .docx draft
     - `previews/tmp_preview.Rmd` uses `child` files to knit together a subset of my .Rmd files to send to my supervisor
-    - There is also a "preview" function with Bookdown, but I haven't been using this (you could though!)
+    - There is also a "preview" function with Bookdown you could explore using!
 
-7. `r emo::ji("books")`
-When happy, compile the whole dissertation with what I have so far
+8. `r emo::ji("books")`
+After major changes, compile the whole dissertation with what I have so far
     - Ensures that I am able to notice and fix any compiling errors at the interim stages and makes me feel like I am making real progress
-
-# RMarkdown crash course {#crashcourse}
-
-*But first: A crash course in RMarkdown*
-
-In Spring 2018 at R-Ladies #LdnOnt we practiced making a [manuscript using RMarkdown](https://github.com/rladies/meetup-presentations_london_ontario/tree/master/2018-03-06_rmarkdown) ([slides](http://rpubs.com/thealk/368020)). 
-Today we will up the ante and write a whole[^1] dissertation using RMarkdown!
-
-`bookdown` is a brilliant R package designed to incorporate multiple RMarkdown files into a single final product, a book. But `bookdown` is not just for books: 
-
-> Despite the package name containing the word “book”, bookdown is not only for books. The “book” can be anything that consists of multiple R Markdown documents meant to be read in a linear sequence, such as course handouts, study notes, a software manual, a thesis, or even a diary. [From the bookdown preface](https://bookdown.org/yihui/bookdown/)
-
-[^1]: More like a smidgin than a whole, really.
-
-**Get up and running with RMarkdown and R Projects: Do exercise 1 in Section \@ref(ex1)**
-
-
-
-
 
 
 
