--- a/dissertating_rmd/presentation_materials/99_Other_Resources.Rmd
+++ b/dissertating_rmd/presentation_materials/99_Other_Resources.Rmd
@@ -7,7 +7,7 @@ As mentioned, this is but one way of doing things, and I have scraped it togethe
 - [Angela Li's thread](https://twitter.com/CivicAngela/status/1024469727274565633)
 - [Rosanna van Hespen's blog series](https://rosannavanhespenresearch.wordpress.com/2016/02/03/writing-your-thesis-with-r-markdown-1-getting-started/)
 - [Chester Ismay's thesisdown package and examples](https://github.com/ismayc/thesisdown) (see other people's adaptations within, as well!)
-  - Hope is to incorporate our Western template eventually!
+  - The hope is to incorporate our Western template eventually!
 - [Ed Berry's blog post](https://eddjberry.netlify.com/post/writing-your-thesis-with-bookdown/)
 - [Tyson Barret's blog post](https://tysonbarrett.com/jekyll/update/2018/02/11/r_dissertation/)
 - [TJ Mahr's dissertation materials](https://github.com/tjmahr/dissertation)
