--- a/dissertating_rmd/presentation_materials/01_Intro.Rmd
+++ b/dissertating_rmd/presentation_materials/01_Intro.Rmd
@@ -6,9 +6,9 @@ This is a non-exhaustive, non-expert guide to writing your dissertation using [`
 
 The materials for this tutorial can be found on [Google Drive](https://drive.google.com/drive/folders/1oNEl6DePF3VSfFQdgQFLxW-_eqs9D24X) or [GitHub](https://github.com/rladies/meetup-presentations_london_ontario/tree/master/2019-04-25_dissertating)
 
-Specifically, it will walk you through *one person's method* of organziing, writing, and rendering a dissertation with these tools, using an adapted version of the [Western University](https://www.uwo.ca/) [thesis templates](https://grad.uwo.ca/academics/thesis/formatting.html) and building primarily off the techniques outlined by [Lucy D'Agostino McGowan](https://livefreeordichotomize.com/2018/09/14/one-year-to-dissertate/), among others (see Section \@ref(resources) for more resources!). The essenece of `bookdown` is to provide a means of combining multiple chapters, each written as separate R Markdown files. This makes it an excellent tool for dissertation writing, as it allows you to seamlessly knit R code and narrative text in a modular, manageable structure. It's also not just for books!
+Specifically, it will walk you through *one person's method* of organizing, writing, and rendering a dissertation with these tools, using an adapted version of the [Western University](https://www.uwo.ca/) [thesis templates](https://grad.uwo.ca/academics/thesis/formatting.html), building off the techniques outlined by [Lucy D'Agostino McGowan](https://livefreeordichotomize.com/2018/09/14/one-year-to-dissertate/), and following Yihui Xie's incredibly helpful [bookdown](https://bookdown.org/yihui/bookdown/) and [rmarkdown](https://bookdown.org/yihui/rmarkdown/) guides. See Section \@ref(resources) for even more resources! The essence of `bookdown` is to provide a means of combining multiple chapters, each written as separate R Markdown files. This makes it an excellent tool for dissertation writing, as it allows you to seamlessly knit R code and narrative text in a modular, manageable structure. It's also not just for books!
 
-> Despite the package name containing the word “book”, bookdown is not only for books. The “book” can be anything that consists of multiple R Markdown documents meant to be read in a linear sequence, such as course handouts, study notes, a software manual, a thesis, or even a diary. [From the bookdown preface](https://bookdown.org/yihui/bookdown/)
+> Despite the package name containing the word “book”, bookdown is not only for books. The “book” can be anything that consists of multiple R Markdown documents meant to be read in a linear sequence, such as course handouts, study notes, a software manual, a thesis, or even a diary. [Yihui Xie](https://bookdown.org/yihui/bookdown/)
 
 **Caveat:** At the time of writing, I am currently in the throes of dissertating. This means that there are likely several details I haven't quite hammered out yet, or techniques I've missed. In the last year and a half, I've been collecting other people's tutorials and resources on using RMarkdown + for the purposes of using it to write a dissertation. The final product is my interpretation of these resources, adapted to my needs, and presented here as a ***"What-I've-learned-so-far"***-style tutorial.
 
@@ -41,7 +41,7 @@ In order to use this tutorial, you need the following:
 install.packages("bookdown")
 ```
 
-I highly recommend giving the [`bookdown manual`](https://bookdown.org/yihui/bookdown/get-started.html) a read-through, as it is very well written and easy to follow, and will cover more than what we can cover here. 
+Yihui also has a super [`bookdown` tutorial](https://bookdown.org/yihui/bookdown/get-started.html) to follow. The [`bookdown manual`](https://bookdown.org/yihui/bookdown/get-started.html) is incredibly comprehensive and easy to follow, and will cover way more than what we'll go in to here. 
 
 ## My current process: A glimpse {#process}
 
